--- a/server/.env.example
+++ b/server/.env.example
@@ -10,7 +10,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=your_db_user
 DB_PASSWORD=your_db_password
-DB_NAME=training_website
+DB_NAME=project_delphi
 
 # JWT
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
