--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "db:migrate": "tsx src/db/migrate.ts"
+    "db:migrate": "tsx src/db/migrate.ts",
+    "db:seed:test": "tsx src/db/seedTestData.ts",
+    "db:clear:test": "tsx src/db/clearTestData.ts"
   },
   "keywords": [],
   "author": "",
