BACKEND & FRONTEND OVERHAUL Changes: - Refactored client directory structure - Fixed bugs in training points management - Added database seeding and reset scripts

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "db:migrate": "tsx src/db/migrate.ts",
-    "db:seed:test": "tsx src/db/seedTestData.ts",
+    "db:reset": "tsx src/db/resetDatabase.ts",
+    "db:seed": "tsx src/db/seedAll.ts",
     "db:clear:test": "tsx src/db/clearTestData.ts"
   },
   "keywords": [],
